--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -64,7 +64,9 @@ From the initial conditions $(\mathbf{r}_i(0),\dot{\mathbf{r}}_i(0.5\delta t))$,
 
 \subsubsection{Diffusivity calculation using the trajectory}
 
-The MD trajectory can be used to generate displacement of any size $\tau$.
+The MD trajectory can be used to generate displacement of any size $\tau$. A naive approach consists in taking $\lVert\mathbf{r}_i(\tau)-\mathbf{r}_i(0)\rVert$
+
+\todo{explain how the trajectories can be augmented by changing the origin}
 
 \todo{cite some studies/review daglar > ref chapter 1}
 
