--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -436,7 +436,7 @@ By combining both the ``blocking'' of the high energy grid points and the ``symm
 \subsection{Performance on the adsorption equilibrium}
 
 If we now look at the performance of this new grid sampling algorithm compared to other sampling algorithms introduced in the previous sections. We can see that it is very advantageous to use this new sampling on the CoRE MOF 2019 database because of its accuracy and its speed.
-The good time performance of the grid sampling on the structures of CoRE MOF 2019 database can be explained by their rather small porosity of the materials and their high order of symmetry. For instance, the average void fraction for a \SI{1.2}{\angstrom} probe radius is equal to $0.16$ and the average number of symmetric images is equal to $5.8$ (most MOFs present symmetry operations). On average, the ``blocking'' procedure means that only {$\sim$16\%} of the grid points really need to be calculated. And the ``symmetry'' procedure implies that only {$\sim$17\%} of points need to be considered, and the combination of both theoretical reduces the number of useful points to only {2.7\%} of the grid. This leads to a significant reduction in the CPU time of the calculation while keeping the accuracy level (low error on the Xe adsorption enthalpy \SI{0.014}{\kilo\joule\per\mole}) compared to the naive grid approach, as shown in Table~\ref{tab:grid}. In the grid simulation, with the blocking procedure, the time required is only {$\sim$29\%} of the time required in a naive approach, and a similar reduction to {$\sim$23\%} is observed for the symmetry-aware grid sampling. By combining both simplifications, the time required of the fast grid sampling is reduced by almost {$\sim$91.6\%} for a grid spacing of \SI{0.12}{\angstrom}.
+The good time performance of the grid sampling on the structures of CoRE MOF 2019 database can be explained by their rather small porosity of the materials and their high order of symmetry. For instance, the average void fraction for a \SI{1.2}{\angstrom} probe radius is equal to $0.16$ and the average number of symmetric images is equal to $5.8$ (most MOFs present symmetry operations). On average, the ``blocking'' procedure means that only {$\sim$16\%} of the grid points really need to be calculated. And the ``symmetry'' procedure implies that only {$\sim$17\%} of points need to be considered, and the combination of both theoretical reduces the number of useful points to only {2.7\%} of the grid. This leads to a significant reduction in the CPU time of the calculation while keeping the accuracy level (low error on the Xe adsorption enthalpy \SI{0.014}{\kilo\joule\per\mole}) compared to the naive grid approach, as shown in Table~\ref{tab:grid}. In the grid simulation, with the blocking procedure, the time required is reduced by {$\sim$70.6\%} compared to the naive approach, and a similar reduction of {$\sim$76.6\%} is observed for the symmetry-aware grid sampling. By combining both simplifications, the time required of the fast grid sampling is reduced by almost {$\sim$91.6\%} for a grid spacing of \SI{0.12}{\angstrom}, which echoes with the fewer points needed to be sampled we mentioned above.
 
 \setlength{\extrarowheight}{0.1cm}
 \begin{table}[ht]
@@ -457,22 +457,35 @@ The good time performance of the grid sampling on the structures of CoRE MOF 201
     Widom\autocite{Widom1963} (12k cycles) & 0.038  &  150 \\
     \hline
   \end{tabular}
-  \caption{Performance comparison of the new grid method to other standard techniques used to calculate the xenon adsorption enthalpies. The RMSE is calculated by comparing to the values given by a 100k-step Widom insertion considered as the ground truth. The associated calculations are performed on the structures with an LCD\e{CCDC} over \SI{3.7}{\angstrom} of CoRE MOF 2019 database with a single Intel Xeon Platinum 8168 core at 2.7~GHz. \todo{refaire les RMSE et tout manque blcking et symmetry}}\label{tab:grid}
+  \caption{Performance comparison of the new grid method to other standard techniques used to calculate the xenon adsorption enthalpies. The RMSE is calculated by comparing to the values given by a 100k-step Widom insertion considered as the ground truth. The associated calculations are performed on the structures with an LCD\e{CCDC} over \SI{3.7}{\angstrom} of CoRE MOF 2019 database with a single Intel Xeon Platinum 8168 core at 2.7~GHz. The GrAED algorithm (with$\mu=0.8$ $E\e{th}=$\SI{100}{\kilo\joule\per\mole}) is evaluated at different grid spacings ($0.12$, $0.20$, $0.30$).}\label{tab:grid}
 \end{table}
 
-\todo{make a figure that sums up this table like for previous section}
+% \todo{Beatify figure with arrow}
+
+\begin{figure}[ht]
+  \centering
+    \includegraphics[width=0.7\textwidth]{figures/3-fastsim/Sum-up_grid.pdf}
+    \caption{Comparison of the RMSE on Xe adsorption enthalpy and the average CPU time required to run a simulation on a structure of CoRE MOF 2019 (LCD\e{CCDC} $\geq$ \SI{3.7}{\angstrom}). The metrics are taken from the Table~\ref{tab:grid}. }\label{fgr:grid_perfomance}
+\end{figure}
+
+As we can see of the Figure~\ref{fgr:grid_widom}, the approach does not damage the accuracy of the adsorption enthalpy and of the Henry constant. There is an almost perfect accordance between the Widom insertion method and the grid-based approach for a very finely meshed grid (\SI{0.12}{\angstrom} spacing). This was expected since both methods are unbiased sampling of the adsorption energies. Almost no error can be detected if looking at the figure for both adsorption enthalpy and Henry constant. The RMSE on the adsorption enthalpy is only about \SI{0.01}{\kilo\joule\per\mole}, while the RMSE on the log10 of the Henry constants (in \si{\milli\mole\per\gram\per\pascal}) is also very low at $0.01$. This method goes back to the initial definition of these quantities at infinite dilution, the perfect correspondence is therefore not very surprising. 
 
 \begin{figure}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/3-fastsim/H_Xe_widom_vs_H_Xe_grid_overview.jpg}
     \includegraphics[width=0.45\textwidth]{figures/3-fastsim/K_Xe_widom_vs_K_Xe_grid_overview.jpg}
-    \caption{Comparison of the xenon adsorption enthalpies (left) and the Henry constants (right) calculated by the optimized grid energy sampling (for a \SI{0.12}{\angstrom} spacing, a rejection parameter $\mu=0.8$ and an energy threshold $E\e{th}$ of \SI{100}{\kilo\joule\per\mole}) and by the Widom insertion of RASPA with 100,000 cycles. }\label{fgr:grid_widom}
+    \caption{Comparison of the xenon adsorption enthalpies (left) and the Henry constants (right) calculated by the optimized grid energy sampling (for a \SI{0.12}{\angstrom} spacing, a rejection parameter $\mu=0.8$ and an energy threshold $E\e{th}$ of \SI{100}{\kilo\joule\per\mole}) and by the Widom insertion of RASPA with 100,000 cycles on the CoRE MOF 2019 structures (LCD\e{CCDC} $\geq$ \SI{3.7}{\angstrom}). }\label{fgr:grid_widom}
 \end{figure}
 
-As we can see of the Figure~\ref{fgr:grid_widom}, the approach does not damage the accuracy of the adsorption enthalpy and of the Henry constant. There is an almost perfect accordance between the Widom insertion method and the grid-based approach for a very finely meshed grid (\SI{0.12}{\angstrom} spacing). This was expected since both methods are unbiased sampling of the adsorption energies. Almost no error can be detected if looking at the figure for both adsorption enthalpy and Henry constant. The RMSE on the adsorption enthalpy is only about \SI{0.01}{\kilo\joule\per\mole}, while the RMSE on the log10 of the Henry constants (in \si{\milli\mole\per\gram\per\pascal}) is also very low at $0.01$. This method goes back to the initial definition of these quantities at infinite dilution, the perfect correspondence is therefore not very surprising. 
+The little computation time required to achieve such an accuracy is, however, much more interesting. If we look at the Table~\ref{tab:grid}, the very accurate grid sampling reaches a similar accuracy than a 12k-cycle Widom insertion calculated using the Raspa software, while being 50 times faster. On the CoRE MOF 2019 database, by using a looser grid spacing of \SI{0.3}{\angstrom}, the GrAED algorithm can even be more interesting than the RAESS algorithm since it halves the computation time while being slightly more accurate. This very comparable performance compared to a dimensionally reduced sampling technique can be explained by two factors of the CoRE MOF database: first, the structures have smaller pores which means a greater surface to volume ratio, which increase the RAESS computation time; second, the highly symmetric structures of CoRE MOF reduces considerably the computation time required for GrAED, and the same cannot be said for other databases such as ToBaCCo or the amorphous database we studied section~\ref{sct:other_database}. 
 
-The little computation time required to achieve such an accuracy is, however, much more interesting. If we look at the Table~\ref{tab:grid}, the very accurate grid sampling reaches a similar accuracy than a 12k-cycle Widom insertion calculated using the Raspa software, while being 50 times faster. On the CoRE MOF 2019 database, by using a looser grid spacing of \SI{0.3}{\angstrom}, the GrAED algorithm can even be more interesting than the RAESS algorithm since it halves the computation time while being slightly more accurate. This very comparable performance compared to a dimensionally reduced sampling technique can be explained by two factors of the CoRE MOF database: first, the structures have smaller pores which means a greater surface to volume ratio, which increase the RAESS computation time; second, the highly symmetric structures of CoRE MOF reduces considerably the computation time required for GrAED, and the same cannot be said for other databases such as ToBaCCo or the amorphous database we studied at the end of the previous chapter. For instance, the computation time required is found to be 750 times higher for a grid sampling than a surface sampling on the amorphous database (see section~\ref{sct:other_database}).
-\todo{tobacco graed results LANCE}
+For instance, the computation time required is found to be 750 times higher for a grid sampling than a surface sampling on the amorphous database (see section~\ref{sct:other_database}), and the RMSE is only of \SI{0.83}{\kJ\per\mol}. For amorphous databases, the surface sampling would be much better than an exhaustive grid sampling because both symmetry and overlap consideration reduce much less the number of sampled points, and we see the effect of surface sampling dimension reduction much more than on the CoRE MOF database. If we now take a look at the ToBaCCo database,\autocite{Colon_2017} the symmetry does not play any role anymore, and the pores are much larger, which means less points blocked by the framework. This impacts directly the performances of the grid sampling compared to the RAESS algorithm. The average time required on the thousand structures of ToBaCCo, considered in section~\ref{sct:other_database}, is now \SI{735}{\s} instead of less than \SI{2}{\s} for a surface sampling. By increasing the grid spacing to $0.3$, we can expect to reduce time required to \SI{47}{\s} with a simple application of the rule of three. The accuracy however is much better than for a surface sampling (see Figure~\ref{fgr:grid_tobacco}), reaching an extremely low RMSE of \SI{0.02}{\kJ\per\mol}. Depending on the number of structures and their nature (symmetry, porosity), we need to choose between the more efficient but less accurate RAESS and the GrAED software.
+
+\begin{figure}[ht]
+  \centering
+    \includegraphics[width=0.45\textwidth]{figures/3-fastsim/H_Xe_0_widom_vs_Enthalpy_grid_kjmol_overview_tobacco.jpeg}
+    \caption{Comparison of the xenon adsorption enthalpies (left) and the Henry constants (right) calculated by the optimized grid energy sampling (for a \SI{0.12}{\angstrom} spacing, a rejection parameter $\mu=0.8$ and an energy threshold $E\e{th}$ of \SI{100}{\kilo\joule\per\mole}) and by the Widom insertion of RASPA with 100,000 cycles on 1000 randomly selected structure of the ToBaCCo.\autocite{Colon_2017} }\label{fgr:grid_tobacco}
+\end{figure}
 
 From the energy values of this grid, we can now calculate many useful descriptors of the adsorption process. We have seen the performance on the Xe adsorption enthalpy and the Xe Henry constant. But as mentioned in the section~\ref{sct:thermo}, we can also derive the Xe adsorption Gibbs free energy and the Xe adsorption entropy. If we now consider the krypton in addition to the xenon, we can naturally evaluate the Kr adsorption thermodynamic quantities but also the exchange thermodynamic quantities and especially the Xe/Kr selectivity (the key metric in evaluating the separation process we are interested in).
 
@@ -625,7 +638,7 @@ These quantities bring in another information on the distribution. For instance,
 
 The Figure~\ref{fgr:enthalpy_skew_kurt} further highlights the range of selectivity value we discussed across this section. The materials within this range can be sorted out using the different statistical quantities we introduced throughout this discussion. Depending on these skewness or kurtosis values it could be theoretically possible to identify a link with the selectivity drop previously identified, but without a model or a framework it is impossible to find the right relationship using our bare eyes.
 
-\todo{Negative skewness > bigger difference in selectivity value ?? Plot something skewness vs diff s1 s0}
+% \todo{Negative skewness > bigger difference in selectivity value ?? Plot something skewness vs diff s1 s0}
 
 \textbf{Uniformely weighted distribution}
 
@@ -644,7 +657,7 @@ The standard deviation of this distribution has a lower value for materials with
 
 To improve this approach, we can explore the use of a higher temperature Boltzmann average for the weights of the distribution, not necessarily using a temperature of \SI{900}{\kelvin}. We can also test out an average on a distribution with a lower energy threshold (zero or the mean kinetic energy of a gas $1.5k\e{B}T$). The idea being we want to characterize a higher energy state like the one happening at ambient pressure. And of course, higher orders of moments can also be tested to give a more complete picture of the distribution.
 
-\vspace{\textheight}
+\vspace{2cm}
 
 In this section, we tried to single out each of the thermodynamic descriptor we can derive from the grid sampling; the approach is limited by the visualization dimension limitation (bidimensional). Although we can see some examples, how it can help sorting the materials according to some properties that could at the end predict the selectivity (for instance, a given range of standard deviation of the uniformly weighted energy distribution can give a range of possible selectivity), it is still difficult to mix the different descriptors and to give a prediction. To achieve just this, many modern approaches use statistical learning to learn this relationship from a large enough set of structures with some computed properties, and this approach will be tested in the next chapter. Finally, every computation detail on the GrAED sampling technique is available online at \url{github.com/coudertlab/GrAED}.
 
