--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -32,10 +32,10 @@ KAXQOR01\autocite{Yeh2012} & aucun & 4,99 & 101 & 3,66 & 3$\times$10\ex{-09} \SI
   QUXQUX\autocite{Banerjee2016hydro} & butane & 5,17 & 103 & 3,83 & 1$\times$10\ex{-07} \SI{}{\square\centi\meter\per\second} \\
 \hline
   UQEFAZ\autocite{Banerjee_2016} & krypton & 4,53 & 23 & 4,08 & 5$\times$10\ex{-06} \SI{}{\square\centi\meter\per\second} \\
-  UQEFED\autocite{Banerjee_2016} & xénon & 4,89 & 63 & 3,54 & 1$\times$10\ex{-11} \SI{}{\square\centi\meter\per\second} \\
+  UQEFED\autocite{Banerjee_2016} & xenon & 4,89 & 63 & 3,54 & 1$\times$10\ex{-11} \SI{}{\square\centi\meter\per\second} \\
 \hline
 \end{tabular}
-\caption{\ Performances de structures similaires à SBMOF-1 décrite par Simon \emph{et al.}\autocite{Simon_2015,Banerjee2016} pour la séparation Xe/Kr. Les deux dernières correspondent aux structures de la publication de Simon, Banerjee \emph{et al.} Différentes tailles de pore induisent différentes sélectivités et différentes diffusivités. }
+\caption{\ Performances de structures similaires à SBMOF-1 décrite par Simon \emph{et al.}\autocite{Simon_2015,Banerjee_2016} pour la séparation Xe/Kr. Les deux dernières correspondent aux structures de la publication de Simon, Banerjee \emph{et al.} Différentes tailles de pore induisent différentes sélectivités et différentes diffusivités. }
 \label{table:sbmof}
 \end{table}
 
